# agents

./: .gitignore
project/: models.json  pyproject.toml
project/agent_core/: code_agent.py
project/experiments/: Untitled.ipynb  file_input_openai.ipynb  test_wrapper.ipynb
project/experiments/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  api_wrappers-checkpoint.ipynb
project/models/: cloud_deepseek.py  cloud_openai.py  models.json  models.py  provider.py  wrapped_response.py
project/services/repl_service/api/: main.py  mypy.ini
project/services/repl_service/benchmarks/: prompts.jsonl  run_benchmark.py
project/services/repl_service/benchmarks/results/: repl_agent__2025-06-17T00-35-03.jsonl  repl_agent__2025-06-20T23-15-31.jsonl  repl_agent__2025-06-21T00-08-56.jsonl  repl_agent__2025-06-21T00-11-53.jsonl  repl_agent__2025-06-23T12-54-03.jsonl  repl_agent__2025-06-23T13-06-36.jsonl  repl_agent__2025-06-23T13-10-28.jsonl  repl_agent__2025-06-23T19-17-08.jsonl  repl_agent__2025-06-23T19-18-10.jsonl  repl_agent__2025-06-23T19-19-40.jsonl  repl_agent__2025-06-23T19-21-56.jsonl  repl_agent__2025-06-23T19-25-30.jsonl  repl_agent__2025-06-23T19-26-07.jsonl  repl_agent__2025-06-24T03-24-37.jsonl  repl_agent__2025-06-24T03-28-05.jsonl  (+8 more)
project/services/repl_service/repl_agent/: code_agent.py  storage.py
project/tests/: test_dir_from_tree.py
project/tools/: dir_from_tree.py  repl.py
project/tools/repl_service/api/: main.py
project/tools/repl_service/repl_agent/: code_agent.py  logger.py
project/tools/tests/: test_dir_from_tree.py
(+1 files in other folders)
